<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondos"
    android:layout_height="match_parent"
    tools:context=".estadistica">

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="499dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bm1"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/dia"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bm2"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/mes"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bm3"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="70sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginRight="70sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/año"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:layout_weight="1"
                    android:text="@string/Fecha"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="#FF9800"
                    android:text="@string/vacio"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bm4"
                    android:layout_width="247dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="25sp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/salir"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>