<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondos"
    tools:context=".opcionadmin">
    <ScrollView
        android:layout_width="312dp"
        android:layout_height="422dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/br1"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="65sp"
                    android:layout_marginRight="65sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/boton"
                    android:text="@string/Menu"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/br2"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="65sp"
                    android:layout_marginRight="65sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/Productos"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/br3"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="65sp"
                    android:layout_marginRight="65sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/estadistica"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/br4"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="150dp"
                    android:background="@drawable/boton"
                    android:text="@string/Regresar"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>