<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondos"
    tools:context=".compraex">

    <ScrollView
        android:layout_width="339dp"
        android:layout_height="521dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:background="#FF9800"
                android:layout_marginTop="30dp"

                android:layout_marginLeft="15sp"
                android:textStyle="bold"
                android:layout_marginRight="15sp"

                android:textAlignment="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/Compraex"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bl1"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/salir"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bl2"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton"
                    android:text="@string/nueva"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>