<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondos"
    android:layout_height="match_parent"
    tools:context=".pago">

    <ScrollView
        android:layout_width="352dp"
        android:layout_height="512dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/Monto"
                    android:textAlignment="center"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ET1"
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginLeft="85sp"
                    android:layout_marginRight="85sp"
                    android:layout_weight="1"
                    android:background="#FFE0B8"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pago"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/Cambio"
                    android:textAlignment="center"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ET2"
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_marginLeft="85sp"
                    android:layout_marginRight="85sp"
                    android:layout_weight="1"
                    android:background="#FFE0B8"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/pago"
                    android:inputType="numberDecimal"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bot1"
                    android:layout_width="71dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="85sp"
                    android:layout_marginRight="85sp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/boton"
                    android:text="@string/Cobrado"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>