<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondos"
    android:layout_height="match_parent"
    tools:context=".opcion">

    <ScrollView
        android:layout_width="312dp"
        android:layout_height="422dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt1"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="85sp"
                    android:layout_marginRight="85sp"
                    android:background="@drawable/boton"
                    android:text="@string/Menu"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt2"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="85sp"
                    android:textStyle="bold"
                    android:layout_marginRight="85sp"
                    android:background="@drawable/boton"
                    android:text="@string/Productos"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt4"
                    android:layout_width="140dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="150dp"
                    android:textStyle="bold"
                    android:background="@drawable/boton"
                    android:text="@string/Regresar"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>